manifests/jovian-prod/n8n/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: jovian-prod
  labels:
    app: n8n
    service: n8n
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: n8n
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: postgres
        image: docker.io/library/postgres:18
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: n8n-db
          protocol: TCP
        volumeMounts:
        - name: n8n-db-config
          mountPath: /var/lib/postgresql
      - name: n8n
        image: aegisfatedh/n8n-custom:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
        ports:
        - containerPort: 5678
          name: n8n-http
          protocol: TCP
        volumeMounts:
        - name: n8n-config
          mountPath: /home/node/.n8n
      - name: n8n-runner
        image: n8nio/runners:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 5679
          name: n8n-runner-task
          protocol: TCP
      volumes:
      - name: n8n-config
        persistentVolumeClaim:
          claimName: n8n-pvc
          readOnly: false
      - name: n8n-db-config
        persistentVolumeClaim:
          claimName: n8n-db-pvc
          readOnly: false
